# Neural-networks-Zero-to-Hero

./: README.md  pyproject.toml
neural_networks_zero_to_hero/: my_micrograd_playground.ipynb
neural_networks_zero_to_hero/.ipynb_checkpoints/: my_micrograd_playground-checkpoint.ipynb
neural_networks_zero_to_hero/makemore/: build_makemore.ipynb
neural_networks_zero_to_hero/micrograd/: graph.py  micrograd_playground_1.ipynb  micrograd_playground_2.ipynb  neuron.py  value.py
