[tool.poetry]
name = "neural-networks-zero-to-hero"
version = "0.1.0"
description = ""
authors = ["Alan Halatian <alanhalatian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
jupyter = "^1.0.0"
graphviz = "^0.20.3"
matplotlib = "^3.8.4"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
